--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Grade Oven</title>
 <!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"> -->
-<div class=page>
+<div class="page">
   {% block body %}{% endblock %}
 </div>
