--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+<h2>Login</h2>
 <form action="/login" method="post">
 <input autofocus="autofocus" autocapitalize="off" name="username" type="text" />
 <input name="password" type="password" />
