--- a/src/templates/courses.html
+++ b/src/templates/courses.html
@@ -3,7 +3,7 @@
 <h2>Courses</h2>
 <ul class="courses">
   {% for course in courses %}
-  <li class="course"><a href="/courses/{{ course|safe }}">{{ course|safe }}</a></li>
+  <li class="course"><a href="/courses/{{ course|e }}">{{ course|e }}</a></li>
   {% endfor %}
 </ul>
 {% endblock %}
