--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
 <h2>Login</h2>
-<form action="/login" method="post">
-<input autofocus="autofocus" autocapitalize="off" name="username" type="text" />
-<input name="password" type="password" />
-<input type="submit" value="Login" />
+<form method="post">
+<input autofocus="autofocus" autocapitalize="off" name="username" type="text" placeholder="username">
+<input name="password" type="password" placeholder="password">
+<input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
+<input type="submit" value="Login">
 </form>
 {% endblock %}
