Implement rough version of stages for creating assignments.  Now assignments are a list of stages, each of which runs a script and contains a set of files that are not exposed until that stage is run.

--- a/src/templates/courses_x_assignments_x.html
+++ b/src/templates/courses_x_assignments_x.html
@@ -1,40 +1,33 @@
 {% extends "base.html" %}
 {% block body %}
 <h2>Course {{ course_name|e }} Assignment {{ assignment_name|e }}</h2>
+{% for error in errors %}
+ERROR {{ error }} <br>
+{% endfor %}
+
 {% if instructs_course %}
 <form method="post" enctype="multipart/form-data">
-  <input name="assignment_desc" type="text" placeholder="assignment description" value="{{ assignment_desc|e }}">
-  <h4>Build:</h4>
-  build files <input type="file" multiple="multiple" name="build_archive[]"><br>
-  commands <textarea name="build_script_cmds" rows="2" cols="80">{{ build_script_cmds|e }}</textarea><br>
-  expected filenames<textarea name="expected_filenames" rows="2" cols="80"></textarea><br>
-  <h4>Test Case:</h4>
-  input files <input type="file" multiple="multiple" name="input_archive[]"><br>
-  expected output files <input type="file" multiple="multiple" name="output_archive[]"><br>
-  commands <textarea name="test_case_cmds" rows="2" cols="80">{{ test_case_cmds|e }}</textarea><br>
+  <input name="assignment_desc" type="text" placeholder="assignment description" value="{{ assignment_desc|e }}"><br>
+  {% for stage in stages %}
+  <h4>{{ stage.name|e }}:</h4>
+  commands <textarea name="main_cmds_{{ stage.name|e }}" rows="5" cols="80">{{ stage.main_script|e }}</textarea><br>
+  {% for filename in stage.filenames_except_main %}
+  FILE {{ filename|e }}<br>
+  {% endfor %}
+  files <input type="file" multiple="multiple" name="files_{{ stage.name|e }}[]"><br>
+  {% endfor %}
+  <input name="new_stage_name" type="text" placeholder="new stage name">
   <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
   <input type="submit" value="Edit Assignment">
 </form>
 {% endif %}
 
 {% if takes_course %}
-{% if build_output %}
-<h4>Build Output:</h4>
-{{ build_output|e }}
-<br>
-{% endif %}
-{% if test_output %}
-<h4>Test Output:</h4>
-{{ test_output|e }}
-<br>
-{% endif %}
-SCORE {{ score }} <br>
-{% for error in errors %}
-ERROR {{ error }} <br>
-{% endfor %}
 <h3>Submit Solution</h3>
+OUTPUT {{ output|e }}<br>
+SCORE {{ score|e }}<br>
 <form method="post" enctype="multipart/form-data">
-  <input type="file" multiple="multiple" name="code_archive[]">
+  <input type="file" multiple="multiple" name="submission_files[]">
   <input type="submit" value="Submit Code">
   <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
 </form>
