--- a/src/templates/courses_x_assignments_x.html
+++ b/src/templates/courses_x_assignments_x.html
@@ -35,9 +35,9 @@
 </form>
 <h3>Previous Submission:</h3>
 <h4>Output:</h4>
-<code><pre>{{ output|e }}</pre></code>
+<code><pre>{{ submission_output|e }}</pre></code>
 <h4>Errors:</h4>
-<code><pre>{{ errors|e }}</pre></code>
+<code><pre>{{ submission_errors|e }}</pre></code>
 {% endif %}
 
 {% if takes_course or instructs_course %}
