Add stub monitoring and a script to turn the server and monitoring.

--- a/src/templates/admin_edit_user.html
+++ b/src/templates/admin_edit_user.html
@@ -17,6 +17,11 @@
   <option value="set">set</option>
   <option value="unset">unset</option>
 </select> is admin
+<select name="is_monitor">
+  <option value=""/>
+  <option value="set">set</option>
+  <option value="unset">unset</option>
+</select> is monitor
 <select name="is_instructor">
   <option value=""/>
   <option value="set">set</option>
