--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <title>Grade Oven</title>
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+</head>
 <!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"> -->
 {% if username %}<div class="header">
 Logged in as {{ username|e }}.  <a href="/">home</a> <a href="/settings">settings</a> <a href="/logout">logout</a>
