--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 <!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"> -->
 {% if username %}<div class="header">
-Logged in as {{ username|e }}.  <a href="/">home</a> <a href="/settings">settings</a> <a href="/logout">logout</a>
+Logged in as {{ username|e }}.  <a href="/">home</a> <a href="/settings">settings</a> <a href="/about">about</a> <a href="/logout">logout</a>
 </div>{% endif %}
 {% with flash_errors = get_flashed_messages() %}
   {% if errors or flash_errors %}
