Fix user-access logging.  Add logs page to view last 100k of a log.

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -5,4 +5,5 @@
 <a href="/admin/edit_user">Add/Edit User</a><br>
 <a href="/admin/db">Internal Data Store</a> (e.g. <a href="/admin/db/courses">courses</a>)<br>
 <a href="/monitor/variables">Monitored Variables</a><br>
+<a href="/monitor/logs">Server and Monitor Logs</a><br>
 {% endblock %}
