Display username and avatar_name on course page for instructors.

--- a/src/templates/courses_x.html
+++ b/src/templates/courses_x.html
@@ -17,8 +17,8 @@
 
 <h3>Students:</h3>
 <ul class="students">
-  {% for username in students %}
-  <li class="student">{{ username|e }}</li>
+  {% for name in students %}
+  <li class="student">{{ name|e }}</li>
   {% endfor %}
 </ul>
 <h4>Add Students:</h4>
