Add basic real name support so that grading students is easier.

--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -2,6 +2,7 @@
 {% block body %}
 <h2>Settings</h2>
 <form method="post">
+  Real/Full Name: <input name="real_name" type="text" placeholder="{{ real_name|e }}"><br><br>
   Avatar Name: <input name="avatar_name" type="text" placeholder="{{ avatar_name|e }}"><br><br>
 
   Change password: <input name="password" type="password" placeholder="password"><br>
