--- a/src/templates/courses_x_assignments.html
+++ b/src/templates/courses_x_assignments.html
@@ -16,4 +16,22 @@
 </form>
 {% endif %}
 
+{% if takes_course or instructs_course %}
+<h3>Scores:</h3>
+<table border="1">
+  <tr>
+    {% for col in header_row %}
+    <th>{{ col|e }}</th>
+    {% endfor %}
+  </tr>
+  {% for row in table %}
+  <tr>
+    {% for col in row %}
+    <td>{{ col|e }}</td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
+
 {% endblock %}
