--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,11 +3,39 @@
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
-<!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"> -->
-{% if username %}<div class="header">
-Logged in as {{ username|e }}.  <a href="/">home</a> <a href="/settings">settings</a> <a href="/about">about</a> <a href="/logout">logout</a>
-</div>{% endif %}
+
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Grade Oven</a> {% if username %}<span class="navbar-brand">(logged in as {{ username|e }})</span>{% endif %}
+    </div>
+    {% if username %}
+    <div class="navbar-collapse collapse" aria-expanded="false" style="height: 0.8px;">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/courses">Courses</a></li>
+        <li><a href="/settings">Settings</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/logout">Logout</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+    {% endif %}
+  </div>
+</nav>
+
 {% with flash_errors = get_flashed_messages() %}
   {% if errors or flash_errors %}
 <h2>Errors:</h2>
@@ -17,6 +45,4 @@ Logged in as {{ username|e }}.  <a href="/">home</a> <a href="/settings">setting
 </ul>
   {% endif %}
 {% endwith %}
-<div class="page">
-  {% block body %}{% endblock %}
-</div>
+<div class="container" role="main">{% block body %}{% endblock %}</div>
