--- a/src/templates/courses_x_assignments_x.html
+++ b/src/templates/courses_x_assignments_x.html
@@ -48,6 +48,17 @@
     <code><pre>{{ submission_output|e }}</pre></code>
   </div>
 </div>
+{% if submission_has_output_html %}
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Output</h3>
+  </div>
+  <div class="panel-body">
+    <!-- TODO: Make iframe resize automatically. -->
+    <iframe id="output_html" name="output_html" width="100%" height="480px" seamless="seamless" sandbox="allow-scripts" src="/courses/{{ course_name|e }}/assignments/{{ assignment_name|e }}/output_html"></iframe>
+  </div>
+</div>
+{% endif %}
 {% if submission_errors %}
 <div class="panel panel-danger">
   <div class="panel-heading">
