Make assignments grade table include username, separate name fields, and look prettier.

--- a/src/templates/courses_x_assignments.html
+++ b/src/templates/courses_x_assignments.html
@@ -18,7 +18,7 @@
 
 {% if takes_course or instructs_course %}
 <h3>Scores:</h3>
-<table border="1">
+<table class="table table-bordered">
   <tr>
     {% for col in header_row %}
     <th>{{ col|e }}</th>
