--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -11,6 +11,10 @@
     <input type="text" class="form-control" placeholder="{{ real_name|e }}" id="real_name" name="real_name">
   </div>
   <div class="form-group">
+    <label for="prefers_anonymity">Be More Anonymous:</label>
+    <input type="checkbox" class="form-control" id="prefers_anonymity" name="prefers_anonymity" value="yes"{% if prefers_anonymity %}checked="checked"{% endif %}>
+  </div>
+  <div class="form-group">
     <label for="password">New Password:</label>
     <input type="password" class="form-control" id="password" name="password">
     <label for="password2">Confirm New Password:</label>
