Make prefers_anonymity option self-explanatory.

--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -11,7 +11,7 @@
     <input type="text" class="form-control" placeholder="{{ real_name|e }}" id="real_name" name="real_name">
   </div>
   <div class="form-group">
-    <label for="prefers_anonymity">Be More Anonymous:</label>
+    <label for="prefers_anonymity">Hide Score from Others:</label>
     <input type="checkbox" class="form-control" id="prefers_anonymity" name="prefers_anonymity" value="yes"{% if prefers_anonymity %}checked="checked"{% endif %}>
   </div>
   <div class="form-group">
