Change all instances of "avatar" to "display". "Display Name" is more intuitive.

--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -3,8 +3,8 @@
 <h2>Settings</h2>
 <form method="post">
   <div class="form-group">
-    <label for="avatar_name">Avatar Name:</label>
-    <input type="text" class="form-control" placeholder="{{ avatar_name|e }}" id="avatar_name" name="avatar_name" autofocus>
+    <label for="display_name">Display Name:</label>
+    <input type="text" class="form-control" placeholder="{{ display_name|e }}" id="display_name" name="display_name" autofocus>
   </div>
   <div class="form-group">
     <label for="real_name">Real/Full Name:</label>
